syntax = "proto3";

option go_package = "github.com/yaroher/protoc-gen-go-plain/test";

package test;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "goplain/goplain.proto";

option (goplain.file).go_types_overrides = {
    selector: {field_kind: TYPE_STRING}
    target_go_type: {name: "UUID", import_path: "github.com/google/uuid"}
};

message UserId {
    option (goplain.message).type_alias = true;
    string value = 1;
}

message Email {
    option (goplain.message).type_alias = true;
    string value = 1;
}

message Address {
    string street = 1;
    string city = 2;
    string country = 3;
}

message AuditInfo {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
}

message Settings {
    string theme = 1;
    bool notifications = 2;
}

message ContactEmail {
    string email = 1;
}

message ContactPhone {
    string phone = 1;
}

message PaymentCard {
    string card_number = 1;
}

message PaymentCrypto {
    string wallet = 1;
}

enum ContactType {
    CONTACT_TYPE_UNSPECIFIED = 0;
    CONTACT_TYPE_EMAIL = 1;
    CONTACT_TYPE_PHONE = 2;
}

message TestMessage {
    option (goplain.message).generate = true;
    option (goplain.message).virtual_fields = {
        name: "password_hash"
        kind: TYPE_BYTES
    };
    option (goplain.message).virtual_fields = {
        name: "created_at_unix"
        kind: TYPE_INT64
    };
    option (goplain.message).virtual_fields = {
        name: "virt_addr"
        kind: TYPE_MESSAGE
        type_url: ".test.Address"
    };
    option (goplain.message).virtual_fields = {
        name: "virt_enum"
        kind: TYPE_ENUM
        type_url: ".test.ContactType"
    };


    string name = 1;
    UserId id = 2;
    Email email = 3;
    int32 age = 4;
    bool active = 5;

    Address address = 6 [(goplain.field).embed = true];
    Address work_address = 7 [(goplain.field).embed_with_prefix = true];
    AuditInfo audit = 8 [(goplain.field).embed = true];

    Settings settings = 9 [(goplain.field).serialize = true];

    string raw_id = 10 [(goplain.field).override_type = {name: "UUID", import_path: "github.com/google/uuid"}];
    google.protobuf.Timestamp created_at_ts = 11 [(goplain.field).override_type = {name: "Time", import_path: "time"}];

    oneof contact {
        option (goplain.oneof).embed = true;
        ContactEmail email_contact = 12;
        ContactPhone phone_contact = 13;
    }

    oneof backup_contact {
        option (goplain.oneof).embed_with_prefix = true;
        ContactEmail backup_email = 14;
        ContactPhone backup_phone = 15;
    }

    oneof payment_method {
        option (goplain.oneof).enum_dispatched = true;
        PaymentCard card = 16;
        PaymentCrypto crypto = 17;
    }

    oneof backup_payment_method {
        option (goplain.oneof).enum_dispatched_with_prefix = true;
        PaymentCard backup_card = 18;
        PaymentCrypto backup_crypto = 19;
    }

    ContactType contact_type = 20;

    oneof contact_enum_dispatch {
        option (goplain.oneof).with_enum = "test.ContactType";
        ContactEmail enum_email = 21 [(goplain.field).oneof_enum_value = "CONTACT_TYPE_EMAIL"];
        ContactPhone enum_phone = 22 [(goplain.field).oneof_enum_value = "CONTACT_TYPE_PHONE"];
    }

    // Scalars
    double f_double = 23;
    float f_float = 24;
    int32 f_int32 = 25;
    int64 f_int64 = 26;
    uint32 f_uint32 = 27;
    uint64 f_uint64 = 28;
    sint32 f_sint32 = 29;
    sint64 f_sint64 = 30;
    fixed32 f_fixed32 = 31;
    fixed64 f_fixed64 = 32;
    sfixed32 f_sfixed32 = 33;
    sfixed64 f_sfixed64 = 34;
    bool f_bool = 35;
    string f_string = 36;
    bytes f_bytes = 37;

    // Repeated scalars
    repeated int32 f_int32_list = 38;
    repeated string f_string_list = 39;

    // Enum
    ContactType f_contact_type = 40;
    repeated ContactType f_contact_type_list = 41;

    // Messages
    Address f_address = 42;
    repeated Address f_address_list = 43;

    // Maps
    map<string, int32> f_map_string_int32 = 44;
    map<string, Address> f_map_string_address = 45;

    // Well-known types
    google.protobuf.Timestamp f_ts = 46;
    google.protobuf.Duration f_duration = 47;
    google.protobuf.Any f_any = 48;
    google.protobuf.Struct f_struct = 49;
    google.protobuf.Value f_value = 50;
    google.protobuf.ListValue f_list_value = 51;
    google.protobuf.Empty f_empty = 52;

    google.protobuf.StringValue f_string_value = 53;
    google.protobuf.BoolValue f_bool_value = 54;
    google.protobuf.Int32Value f_int32_value = 55;
    google.protobuf.Int64Value f_int64_value = 56;
    google.protobuf.UInt32Value f_uint32_value = 57;
    google.protobuf.UInt64Value f_uint64_value = 58;
    google.protobuf.FloatValue f_float_value = 59;
    google.protobuf.DoubleValue f_double_value = 60;
    google.protobuf.BytesValue f_bytes_value = 61;
}
